# diandianai

./: .env  .env.example  CLAUDE.md  README.md  README_SETUP.md  SUPABASE_配置指南.md  database_schema.sql  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  redis.conf  requirements.txt  tailwind.config.ts
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  config.py  database_optimizer.py  debug_config.py  debug_routes.py  pyproject.toml  redis_optimizer.py  requirements.txt  simple_test.py  test_ai_service.py  test_api_manually.py  test_kimi_api.py
backend/alembic/: env.py
backend/alembic/versions/: 118ce775137b_fix_schema_inconsistencies_and_add_.py  5276d92b1907_initial_migration_with_all_models.py  f53cab833865_add_missing_ai_conversation_fields.py
backend/scripts/: init-db.sql  run_all_seeds.py  seed_ai_config.py  seed_data.py  seed_shipments.py
backend/src/: main.py
backend/src/api/: admin.py  ai.py  auth.py  logistics.py  simple_ai.py  sse.py
backend/src/core/: celery_app.py  config.py  database.py  security.py
backend/src/integrations/: g7_api.py  sms_api.py  wechat_api.py
backend/src/models/: __init__.py  ai_models.py  base.py  gps.py  logistics.py  summaries.py  users.py
backend/src/scripts/: create_test_shipments.py  create_user_and_data.py
backend/src/services/: ai_conversation_service.py  ai_service.py  auth_service.py  context_builder.py  gps_service.py  logistics_service.py  notification_service.py  simple_chat_service.py
src/: App.tsx  (+1 more)
(+111 files in other folders)
